Now bg image is set full in ios

--- a/androidApp/src/main/res/xml/network_security_config.xml
+++ b/androidApp/src/main/res/xml/network_security_config.xml
@@ -26,7 +26,7 @@
             <!--<pin digest="SHA-256">ReplaceWithYourPin</pin>-->
         </pin-set>
         <trust-anchors>
-            <certificates src="@raw/ssl_production_goistats" />
+<!--            <certificates src="@raw/ssl_production_goistats" />-->
             <!--<certificates src="system" />
             <certificates src="user" />-->
         </trust-anchors>
